--- a/Pet/Properties/Resources.resx
+++ b/Pet/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -109,9 +112,57 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="comment1" xml:space="preserve">
+    <value>Your pet dreamt of you tonight.</value>
+  </data>
+  <data name="comment10" xml:space="preserve">
+    <value>A big bone is very useful if you're tired of feeding your pet.</value>
+  </data>
+  <data name="comment11" xml:space="preserve">
+    <value>Your pet... you will need a new jacket.</value>
+  </data>
+  <data name="comment12" xml:space="preserve">
+    <value>Never kick your pet.</value>
+  </data>
+  <data name="comment13" xml:space="preserve">
+    <value>The name is very important (e.g. a parrot called Rex is aggressive).</value>
+  </data>
+  <data name="comment14" xml:space="preserve">
+    <value>There is a little chance of getting the third choice every day.</value>
+  </data>
+  <data name="comment15" xml:space="preserve">
+    <value>Dogs can understand up to 250 words!</value>
+  </data>
+  <data name="comment16" xml:space="preserve">
+    <value>Cats can run at 50 km per hour for some time!</value>
+  </data>
+  <data name="comment2" xml:space="preserve">
+    <value>Win more games to unlock other pets.</value>
+  </data>
+  <data name="comment3" xml:space="preserve">
+    <value>Consider taking a break.</value>
+  </data>
+  <data name="comment4" xml:space="preserve">
+    <value>The panda a secret pet.</value>
+  </data>
+  <data name="comment5" xml:space="preserve">
+    <value>You can always erase your statistics.</value>
+  </data>
+  <data name="comment6" xml:space="preserve">
+    <value>Your pet has met another pet for the first time.</value>
+  </data>
+  <data name="comment7" xml:space="preserve">
+    <value>Your pet has woken up.</value>
+  </data>
+  <data name="comment8" xml:space="preserve">
+    <value>Your pet wants to go for a walk.</value>
+  </data>
+  <data name="comment9" xml:space="preserve">
+    <value>Your pet loves you.</value>
+  </data>
 </root>
